kchmviewer (6.0-0r1) UNRELEASED; urgency=medium

  [ Pino Toscano ]
  * New upstream release.
  * Update patches:
    - 01_disable_kio-msits_build.diff: drop, obsolete

 -- Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Sun, 09 Feb 2014 14:19:04 +0100

kchmviewer (5.3-1) unstable; urgency=low

  * New upstream release.
  * Remove patches:
    - 00_ftbfs_svn_r363.diff - merged upstream
    - 02_grammatical_error.diff - merger upstream
  * Add disable_check_new_version.patch to disable new version checking.
    (Closes: #602535)

 -- Fathi Boudra <fabo@debian.org>  Sun, 30 Jan 2011 19:08:06 +0200

kchmviewer (5.2-1) unstable; urgency=low

  * New upstream release.
  * Add patch to fix ftbfs caused by missing files.
  * Add Recommends okular-extra-backends. (Closes: #597719)

 -- Fathi Boudra <fabo@debian.org>  Wed, 06 Oct 2010 16:47:08 +0300

kchmviewer (5.1-1) unstable; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Switch to dpkg-source 3.0 (quilt) format.
  * Update debian/control:
    - Remove quilt from Build-Depends.
  * Refresh 01_disable_kio-msits_build.diff patch.

  [ Fathi Boudra ]
  * Add 02_grammatical_error.diff patch. Thanks to Chris Leick.
    (Closes: #536201)
  * Update debian/control:
    - Bump build dependencies versions (debhelper and pkg-kde-tools).
    - Bump Standards-Version to 3.8.4 (no changes needed).
  * Update debian/copyright:
    - kchmviewer is licensed under the GPL version 3 since version 5.0.
  * Update debian/rules:
    - Enable parallel build (pass --parallel option to dh).
    - Use kde sequence addon. (Closes: #574309)

 -- Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Wed, 17 Mar 2010 19:56:04 +0100

kchmviewer (4.1-1) unstable; urgency=low

  * New upstream release. (Closes: #479402, #496888)
  * Add patch to disable kio-msits build to avoid okular-extra-backends
    conflict.
  * Bump compat/debhelper to 7.
  * Update debian/control: